# final_price

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
data/configs/nginx/: nginx.conf
data/configs/nginx/conf.d/: gzip.conf
data/configs/nginx/conf.d/snippets/: headers.conf  proxy.conf  ssl.conf
data/configs/nginx/sites-available/: example.com
data/configs/redis/: redis.conf
data/scripts/: wait-services.sh
data/static/: 404.html  index.html
data/static/assets/: main.js  styles.css
src/: app.py  config.py  enums.py  middleware.py  utils.py
src/admin/: auth.py  formatters.py  models.py  utils.py
src/api/: __init__.py
src/api/routers/: orders.py
src/cli/: db.py
src/db/: alembic.ini  base.py  enums.py  models.py  utils.py
src/db/alembic/: env.py  script.py.mako
src/db/alembic/migrations/: 894b747ee888_.py
src/db/models/: order.py  user.py
src/db/utils/: __init__.py  order.py  user.py
src/rq/: __init__.py  config.py  job.py  processors.py  serializers.py  utils.py  worker.py
src/schemas/: __init__.py  order.py
src/services/: __init__.py  base.py  order.py
